<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pinky_flu"
    android:orientation="vertical"
    tools:context=".ui.payment.PaymentFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Payment"
                android:textAlignment="center"
                android:textColor="@color/pink"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:background="@drawable/round_outline"
                android:drawableStart="@drawable/name"
                android:ems="10"
                android:hint="Name Surname"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_credit_cart"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/round_outline"
                android:digits="0123456789- "
                android:drawableStart="@drawable/card"
                android:ems="10"
                android:hint="Credit Cart Number"
                android:inputType="number"
                android:maxLength="25" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_month"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:hint="@string/Month"
                    app:boxStrokeColor="@color/pink"
                    app:helperTextTextColor="@color/pinky_flu"
                    app:hintTextColor="@color/pink"
                    app:placeholderTextColor="@color/pinky_flu"
                    app:prefixTextColor="@color/pinky_flu"
                    app:suffixTextColor="@color/pinky_flu">

                    <AutoCompleteTextView
                        android:id="@+id/act_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_year"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:hint="@string/Year"
                    app:boxStrokeColor="@color/pink"
                    app:helperTextTextColor="@color/pinky_flu"
                    app:hintTextColor="@color/pink"
                    app:placeholderTextColor="@color/pinky_flu"
                    app:prefixTextColor="@color/pinky_flu"
                    app:suffixTextColor="@color/pinky_flu">

                    <AutoCompleteTextView
                        android:id="@+id/act_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/et_cvc"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/etradius"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:hint="@string/cvc"
                    android:inputType="number"
                    android:maxLength="3"
                    app:hintTextColor="@color/pink" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_adresses"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/round_outline"
                android:drawableStart="@drawable/home"
                android:ems="10"
                android:hint="Adresses"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="161dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/pink"
                android:text="Pay"
                android:textColorLink="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginEnd="180dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>